--- a/HTML/Canvas/index.html
+++ b/HTML/Canvas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>canvas Test</title>
 </head>
 <body>
 <canvas id="canvas" style="border: 1px solid #333;"> </canvas>
