--- a/BackBone/introduct-collections/index.html
+++ b/BackBone/introduct-collections/index.html
@@ -18,24 +18,37 @@
     				title:'default'
     			},
     			initialize:function(){
-
     			}
     		});
-    		var  BookShelf = Backbone.collection.extend({
+    		var  BookShelf = Backbone.Collection.extend({
     			model:Book
     		});
 
     		var book1 =new Book({title:'book1'});
     		var book2 =new Book({title:'book2'});
 
+    		//注意这里面是数组,或者使用add
+			//var bookShelf = new BookShelf([book1, book2, book3]);
     		var bookShelf =new BookShelf();
-
-    		bookShelf.add(book1);
-    		bookShelf.add(book2);
-
-    		bookShelf.each(function(book) {
-    			console.log(book.get('title'));
+    		bookShelf.url ='http://localhost:3000/backbone/bookshelf';
+    		bookShelf.fetch({
+    			success:function(collection,response,options){
+    				collection.each(function(book) {
+    					alert(book.get('title'));
+    				});
+    			},
+    			error:function(collection,response,options){
+    			},
     		});
+
+
+    		// bookShelf.add(book1);
+    		// bookShelf.add(book2);
+
+			//基于underscore这个js库，还可以使用each的方法获取collection中的数据
+    		// bookShelf.each(function(book) {
+    		// 	console.log(book.get('title'));
+    		// });
     	})(jQuery);
     </script>
 </body>
